--- a/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
+++ b/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/stylesheets/jumbotron-narrow.css" rel="stylesheet" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <link href="~/css/index.css" rel="stylesheet" />
 </head>
 
 <body>
