--- a/SpotifyOpgaveCore/Views/Rooms/Create.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Owner" class="control-label"></label>
-                <input asp-for="Owner" class="form-control" />
+                <input asp-for="Owner" value="@User.Identity.Name" class="form-control" readonly />
                 <span asp-validation-for="Owner" class="text-danger"></span>
             </div>
             <div class="form-group">
