Player added plus fixez

--- a/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
+++ b/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
@@ -7,8 +7,11 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Mvc.Client (OSOS sample)</title>
-
+    <title>Spotify Hovedopgave</title>
+    <link href="@Url.Content("~/Styles/main.css")" rel="stylesheet" type="text/css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="~/js/Player.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/stylesheets/jumbotron-narrow.css" rel="stylesheet" />
     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -24,7 +27,7 @@
         @RenderBody()
         
         <div class="footer">
-            <p>&copy; Your company 2014</p>
+            <p>&copy; Hovedopgave 2018</p>
         </div>
 
     </div>
