--- a/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
@@ -42,6 +42,37 @@
         </dd>
     </dl>
 </div>
+<h2>@User.Identity.Name's Queue</h2>
+<table id="Grid" class="table table-dark table-hover table-condensed">
+    <tbody>
+        <tr>
+            <td>
+
+                <div class="btn-group col-3">
+                    <button onclick="Play('music.mp3','audio');" class="btn btn-custom"><span title="Play" id="play" class="icon-play aligned"></span></button>
+                    <button onclick="Stop('music.mp3','audio');" class="btn btn-custom"><span title="Stop" id="stop" class="icon-stop aligned"></span></button>
+                    <button onclick="Previous('music.mp3','audio');" class="btn btn-custom"><span title="Previous" id="previous" class="icon-step-backward aligned"></span></button>
+                    <button onclick="Next('music.mp3','audio');" class="btn btn-custom"><span title="Next" id="next" class="icon-step-forward aligned"></span></button>
+                    <button onclick="Backward5('music.mp3','audio');" class="btn btn-custom"><span title="-5 seconds" id="play" class="icon-fast-backward aligned"></span></button>
+                    <button onclick="Forward5('music.mp3','audio');" class="btn btn-custom"><span title="+5 seconds" id="play" class="icon-fast-forward aligned"></span></button>
+                    <button onclick="Backward1('music.mp3','audio');" class="btn btn-custom"><span title="-1 second" id="play" class="icon-chevron-left aligned"></span></button>
+                    <button onclick="Forward1('music.mp3','audio');" class="btn btn-custom"><span title="+1 second" id="play" class="icon-chevron-right aligned"></span></button>
+                    <button onclick="VolumeUp('music.mp3','audio');" class="btn btn-custom"><span title="Volume Up" id="volumeup" class="icon-plus aligned"></span></button>
+                    <button onclick="VolumeDown('music.mp3','audio');" class="btn btn-custom"><span title="Volume Down" id="volumedown" class="icon-minus aligned"></span></button>
+                    <i class="fa fa-spotify fa-2x" style="color: #1db954; margin-left:10px;"></i>
+                </div>
+
+
+            </td>
+            <td>
+                @ViewBag.song
+            </td>
+            <td>Stemmer</td>
+
+        </tr>
+    </tbody>
+
+</table>
 <div class="input-group input-group-sm mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">Search</span>
