--- a/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
+++ b/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
@@ -8,13 +8,16 @@
     <meta name="author" content="" />
 
     <title>Spotify Hovedopgave</title>
-    <link href="@Url.Content("~/Styles/main.css")" rel="stylesheet" type="text/css" />
+    <link href="~/css/Main.css" rel="stylesheet" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="~/js/Player.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation/dist/additional-methods.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/stylesheets/jumbotron-narrow.css" rel="stylesheet" />
-    <script src="~/lib/jquery/dist/jquery.js"></script>
     <link href="~/css/index.css" rel="stylesheet" />
 </head>
 
