--- a/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Room
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.12.4.js"></script>
-@*<script>
+<script>
     function GetContext() {
             $.ajax(
                 {
@@ -17,7 +17,7 @@
         console.log("yo");
     }
 
-</script>*@
+</script>
 <table id="Grid" class="table table-dark table-hover table-condensed">
     <tbody>
         <tr>
