--- a/SpotifyOpgaveCore/Views/Home/Index.cshtml
+++ b/SpotifyOpgaveCore/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             </div>
             @*TODO: Smid css et andet sted*@
             <form>
-                <input type="button" value="Opret Playliste" onclick="window.location.href='http://spotify.a2hosted.com/Rooms/Create'" style="
+                <input type="button" value="Opret Playliste" onclick="window.location.href='@Url.Action("Create","Rooms")'" style="
     color: #fff;
     background-color: #337ab7;
     border-color: #2e6da4;
