--- a/SpotifyOpgaveCore/Views/Rooms/searchResult.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/searchResult.cshtml
@@ -13,6 +13,7 @@
                     }
                 });
             console.log("hey");
+            console.log(this.dataset);
         });
     });
 </script>
