--- a/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
@@ -1,18 +1,24 @@
-﻿@model Room
+﻿@model SpotifyOpgaveCore.Models.Room
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.12.4.js"></script>
 @*<script>
-    setInterval(function GetContext() {
-        $.ajax(
-            {
-                url: "@Url.Action("PlayingContext")", // Controller/View
-                success: function (data) {
-                    $("#playerContext").html(data);
-                }
+    $(document).ready(function () {
+        $("#searchBox").on('input', function () {
+            $.ajax(
+                {
+                    url: "@Url.Action("Create","Songs")", // Controller/View
+                    data: { //Passing data
+                        searchString: $("#searchBox").val(), //Reading text box values using Jquery
 
+                },
+                success: function (data) {
+                    $("#list-result").html(data);
+                }
             });
-        console.log("aeer");
-    }, 2000);
+            console.log("yo");
+
+        });
+    });
 </script>*@
 <table id="Grid" class="table table-dark table-hover table-condensed">
     <tbody>
