--- a/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
@@ -8,7 +8,9 @@
         $("#searchBox").on('input', function () {
             $.ajax(
                 {
-                    url: "@Url.Action("Search", Model)", // Controller/View
+                    type:"POST",
+                    url: "@Url.Action("Search", new { id = Model.RoomId })", // Controller/View
+                    dataType: 'html',
                     data: { //Passing data
                         searchString: $("#searchBox").val(), //Reading text box values using Jquery
 
@@ -22,6 +24,7 @@
         });
     });
 </script>
+
 <h2>Details</h2>
 
 <div>
@@ -48,7 +51,7 @@
     setInterval(function GetContext() {
         $.ajax(
             {
-                url: "@Url.Action("PlayingContext")", // Controller/View
+                url: "@Url.Action("PlayingContext", new { id = Model.RoomId })", // Controller/View
                 success: function (data) {
                     $("#playerContext").html(data);
                 }
@@ -58,7 +61,7 @@
     }, 2000);
 </script>
 <div id="playerContext">
-    @Html.Partial("playingContext",Model)
+    @Html.Partial("playingContext", Model)
 </div> }
 <div class="input-group input-group-sm mb-3">
     <div class="input-group-prepend">
@@ -67,41 +70,12 @@
     <input type="text" id="searchBox" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
 </div>
 <div id="list-result">
-    @Html.Partial("searchResult",Model)
+    @Html.Partial("Search", Model)
 </div>
-<table id="Grid" class="table table-striped table-bordered table-hover table-condensed">
-    <tbody>
-        @if (Model.Songs == null)
-        {
-            <p>Ingen sange her</p>
-        }
-        else
-        {
-            foreach (var item in @Model.Songs)
-            {
-                <tr>
-                    <td></td>
-                    <td>
-                        <div class="row" id="song" style="justify-content: space-between; padding:16px;">
-                            <a id="tab" data-index="@item.SongID" data-index2="@item.RoomId" name="tab" href="#">@item.Name</a>
+<div id="songList">
+    @Html.Partial("CreateSong",Model)
 
-                            <div>
-                                <a class="icon-thumbs-up" href="#" style="color:green;"></a>
-                                <a class="icon-thumbs-down" href="#" style="color:red;"></a>
-                            </div>
-                        </div>
-                    </td>
-                    <td>
-                        Stemmer
-                    </td>
-                    <td>
-                        <a class="btn" href="#" style="color:green;font-size: 30px;">+</a>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
+</div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.RoomId">Edit</a> |
     <a asp-action="Index">Back to List</a>
