--- a/SpotifyOpgaveCore/Views/Rooms/CreateSong.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/CreateSong.cshtml
@@ -1,4 +1,40 @@
 ﻿@model SpotifyOpgaveCore.Models.Room
+<script>
+        $(document).ready(function () {
+        $("a[name=upvote]").on("click", function () {
+            $.ajax(
+                {
+                    type: "POST", //HTTP POST Method
+                    url: "@Url.Action("Upvote","Rooms")", // Controller/View
+                    data: { //Passing data
+                        songId: $(this).data("index"),
+                        id: $(this).data("index2"),//Reading text box values using Jquery
+                    },
+                    success: function (data) {
+                        $("#songList").html(data);
+                    }
+                });
+            console.log("vote addedd");
+        });
+    });
+            $(document).ready(function () {
+        $("a[name=downvote]").on("click", function () {
+            $.ajax(
+                {
+                    type: "POST", //HTTP POST Method
+                    url: "@Url.Action("Downvote","Rooms")", // Controller/View
+                    data: { //Passing data
+                        songId: $(this).data("index"),
+                        id: $(this).data("index2"),//Reading text box values using Jquery
+                    },
+                    success: function (data) {
+                        $("#songList").html(data);
+                    }
+                });
+            console.log("vote removed");
+        });
+    });
+</script>
 <table id="Grid" class="table table-striped table-bordered table-hover table-condensed">
     <tbody>
         @if (Model.Songs == null)
@@ -10,25 +46,27 @@
             foreach (var item in @Model.Songs)
             {
                 <tr>
-                    <td></td>
                     <td>
                         <div class="row" id="song" style="justify-content: space-between; padding:16px;">
-                            <a id="tab" data-index="@item.SongID" data-index2="@item.RoomId" name="tab" href="#">@item.Name</a>
+                            <a id="tab" data-index="@item.SongID" data-index2="@item.RoomId" name="tab" href="#" >@item.Name</a>
+                                </div>
+                            </td>
+                    <td>
+                        <a id="upvote" class="icon-thumbs-up" data-index="@item.SongID" data-index2="@item.RoomId" href="#" name="upvote" style="color:green;"></a>
 
-                            <div>
-                                <a class="icon-thumbs-up" href="#" style="color:green;"></a>
-                                <a class="icon-thumbs-down" href="#" style="color:red;"></a>
-                            </div>
-                        </div>
+                        @if (item.Votes != null)
+                        {
+                        <h4> @item.Votes.OrderByDescending(x => x.VoteId).Select(f => f.Value).FirstOrDefault()</h4>
+                        }
+                        else
+                        {
+                            <h4>0</h4>
+                        }
+                        <a id="downvote" class="icon-thumbs-down" data-index="@item.SongID" data-index2="@item.RoomId" href="#" name="downvote" style="color:red;"></a>
+
                     </td>
-                    <td>
-                        Stemmer
-                    </td>
-                    <td>
-                        <a class="btn" href="#" style="color:green;font-size: 30px;">+</a>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
