--- a/SpotifyOpgaveCore/Views/Authentication/SignIn.cshtml
+++ b/SpotifyOpgaveCore/Views/Authentication/SignIn.cshtml
@@ -2,8 +2,8 @@
 @model AuthenticationScheme[]
 
 <div class="jumbotron">
-    <h1>Authentication</h1>
-    <p class="lead text-left">Sign in using one of these external providers:</p>
+    <h1>Login</h1>
+    <p class="lead text-left">Du skal logge ind på følgende service:</p>
     
     @foreach (var scheme in Model)
     {
@@ -11,7 +11,7 @@
             <input type="hidden" name="Provider" value="@scheme.Name" />
             <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
 
-            <button class="btn btn-lg btn-success" type="submit">Connect using @scheme.DisplayName</button>
+            <button class="btn btn-lg btn-success" type="submit">Login til @scheme.DisplayName</button>
         </form>
     }
 </div>
