--- a/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
+++ b/SpotifyOpgaveCore/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h3 class="text-muted">Your application (Mvc.Client)</h3>
+            
+            <img src="~/images/banner.png" style="width: 100%" />
         </div>
 
         @RenderBody()
