--- a/SpotifyOpgaveCore/wwwroot/css/Main.css
+++ b/SpotifyOpgaveCore/wwwroot/css/Main.css
@@ -1,5 +1,6 @@
 ﻿.navbar {
-    background-image: url('../Images/Unavngivet.png');
+    
+    background-image: url('../images/unavngivet.png');
     font-weight: 900;
 }
 
