--- a/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
@@ -91,6 +91,8 @@
 </div>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.RoomId">Rediger</a> 
+    @if(User.Identity.Name == Model.Owner) {
+    <a asp-action="Edit" asp-route-id="@Model.RoomId">Rediger</a>
+    }
     @* <a asp-action="Index">Back to List</a>*@
 </div>
