--- a/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/Details.cshtml
@@ -25,10 +25,22 @@
     });
 </script>
 
-<h2>Details</h2>
+
 
 <div>
-    <h4>Room</h4>
+    <div class="row col-12">
+        <h2>Details</h2>
+        <h4>Room</h4>
+        @if (User?.Identity?.IsAuthenticated ?? false)
+            {
+        <div class="" style="text-align:center;">
+            <p>Du er logged ind som @User.Identity.Name</p> <a class="btn btn-sm btn-danger" href="/signout?returnUrl=%2F">Log af</a>
+
+        </div>
+
+            }
+    </div>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -59,19 +71,7 @@
 </div>
 <h2>@Html.DisplayFor(model => model.Owner)'s Queue</h2>
 @if(User.Identity.Name == Model.Owner) {
-<script>
-    setInterval(function GetContext() {
-        $.ajax(
-            {
-                url: "@Url.Action("PlayingContext", new { id = Model.RoomId })", // Controller/View
-                success: function (data) {
-                    $("#playerContext").html(data);
-                }
 
-            });
-        console.log("yo");
-    }, 2000);
-</script>
 
 <div id="playerContext">
     @Html.Partial("playingContext", Model)
