--- a/SpotifyOpgaveCore/wwwroot/css/index.css
+++ b/SpotifyOpgaveCore/wwwroot/css/index.css
@@ -33,6 +33,11 @@
     line-height: 1.42857143;
     margin-top: 10px;
 }
+.btn-custom {
+    color: black;
+    background-color: lightgrey; 
+    border-color: lightgray; 
+}
 
 .modal {
     display: none; /* Hidden by default */
