--- a/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/playingContext.cshtml
@@ -8,9 +8,9 @@
             <td>
 
                 <div class="btn-group col-3">
-                    <button onclick="Play('music.mp3','audio');" class="btn btn-custom"><span title="Play" id="play" class="icon-play aligned"></span></button>
-                    <button onclick="Stop('music.mp3','audio');" class="btn btn-custom"><span title="Stop" id="stop" class="icon-stop aligned"></span></button>
-                    <button onclick="Next('music.mp3','audio');" class="btn btn-custom"><span title="Next" id="next" class="icon-step-forward aligned"></span></button>
+                    <button onclick="Play();" class="btn btn-custom"><span title="Play" id="play" class="icon-play aligned"></span></button>
+                    <button onclick="Stop();" class="btn btn-custom"><span title="Stop" id="stop" class="icon-stop aligned"></span></button>
+                    <button onclick="Next();" class="btn btn-custom"><span title="Next" id="next" class="icon-step-forward aligned"></span></button>
                     <i class="fa fa-spotify fa-2x" style="color: #1db954; margin-left:10px;"></i>
                 </div>
 
